All the basic functions done. Bookmarks can be added, deleted and retrived.

--- a/popup.html
+++ b/popup.html
@@ -1,23 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
+<link href="popup.css" rel="stylesheet" type="text/css" />
+<script type="module" src="popup.js"></script>
 
-<head>
-    <link href="popup.css" rel="stylesheet" type="text/css">
-    <script src="./scripts/content.js"></script>
-    <h1>Hello World</h1>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+<div class="container">
+  <div>
+    <div class="title">Your bookmarks for this video</div>
 
-<body>
-    <div class="container">
-        <div>
-          <div class="title">Your bookmarks for this video</div>
-      
-          <div class="bookmarks" id="bookmarks"></div>
-        </div>
-      </div>
-</body>
-
-</html>
+    <div class="bookmarks" id="bookmarks"></div>
+  </div>
+</div>
